--- a/hackathon/gui_server/gui.html
+++ b/hackathon/gui_server/gui.html
@@ -12,6 +12,7 @@
     <div>
       <input type="number" min="1" max="99" value="1">
       <button> Receive </button>
+      <div id="waiting" style="display: none;"> Waiting for message... </div>
     </div>
   </form>
   <form id="tx">
