--- a/hackathon/gui_server/gui.html
+++ b/hackathon/gui_server/gui.html
@@ -8,7 +8,9 @@
 <body>
   <form id="rx">
     <h1> Receive </h1>
-    <div id="text"> Have not yet received any message! </div>
+    <div id="messages">
+      <!-- add messages here -->
+    </div>
     <div>
       <input type="number" min="1" max="99" value="1">
       <button> Receive </button>
