--- a/hackathon/gui_server/gui.html
+++ b/hackathon/gui_server/gui.html
@@ -3,24 +3,16 @@
 <head>
   <link rel="stylesheet" href="./static/gui.css">
   <script src="./static/gui.js"></script>
-  <title> Stranded in Space with Red Pitaya </title>
+  <title> Stranded in Space </title>
 </head>
 <body>
-  <form id="rx">
-    <h1> Receive </h1>
-    <div id="messages">
-      <!-- add messages here -->
-    </div>
-    <div>
-      <input type="number" min="1" max="99" value="10">
-      <button> Receive </button>
-      <div id="waiting" style="display: none;"> Waiting for message... </div>
-    </div>
-  </form>
-  <form id="tx">
-    <h1> Transmit </h1>
-    <input type="text" required>
-    <button> Transmit </button>
+  <h1> Stranded in Space </h1>
+  <main>
+    <!-- add messages here -->
+  </main>
+  <form>
+    <input type="text"
+      placeholder="Enter your message here">
   </form>
 </body>
 </html>
